apps/generic/overlays/bookorbit/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookorbit
spec:
  template:
    spec:
      containers:
        - name: container
          image: ghcr.io/bookorbit/bookorbit:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 3Gi
          volumeMounts:
            - name: yasr-volume
              mountPath: /data
              subPath: configs/bookorbit/
            - name: yasr-volume
              mountPath: /downloads
              subPath: configs/transmission/downloads/books
            - name: main-volume
              mountPath: /books
              subPath: ${BOOKS_PATH:=public/Books}
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /api/v1/health
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 10
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
