apps/generic/overlays/bookorbit/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
